--- a/Image Contrast.ipynb
+++ b/Image Contrast.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here I ave tried to locate different parts in the brain and to show brain phantom in different contrasts using T1,T2 and PD weighting."
+    "Here I have tried to locate different parts in the brain and to show brain phantom in different contrasts using T1,T2 and PD weighting."
    ]
   },
   {
